Fixed a spacing issue with the information table on the product's page.

--- a/sass/layouts/_product.scss
+++ b/sass/layouts/_product.scss
@@ -26,6 +26,10 @@
         padding: 20px 10px;
       }
 
+      table {
+        margin-bottom: 20px;
+      }
+
       &__img {
         display: flex;
         height: 100%;
